--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: Jekyll Serial Programmer
 markdown: kramdown
-url: ""
+url: "blog.sungho.xyz"
 baseurl: "/jekyll-theme-serial-programmer"
 
 # for atom feed
