--- a/_data/author.yml
+++ b/_data/author.yml
@@ -1,23 +1,17 @@
-name: Sharad Raj
-dp: https://avatars2.githubusercontent.com/u/36638057?s=460&u=0cbe4fd6b5a3655d91b3eb86db834d0829a0c086&v=4
+name: 문성호
+dp: https://avatars.githubusercontent.com/u/64302779?v=4
 description: "
   <p>
-    Developed by Sharad Raj who lives in India building useful things for the world.
+    만 12세 초등학생 개발자 문성호입니다.
   </p>
-  <br/>
-  <p>
-    You should follow him on <a href='https://github.com/sharadcodes' target='_blank'>Github</a>
-  </P>
 "
-email: dev_sharad@outlook.com
+email: sungho.moon@aol.com
 contact:
-  - title: linkedin
-    url: https://www.linkedin.com/in/srsmaurya
   - title: github
-    url: https://github.com/sharadcodes
+    url: https://github.com/sungho0205
   - title: twitter
-    url: https://twitter.com/iamsharadraj
-  - title: dev
-    url: https://dev.to/sharadcodes
+    url: https://twitter.com/sungho__moon
+  - title: website
+    url: https://sungho.xyz
   - title: email
-    url: mailto:dev_sharad@outlook.com
+    url: mailto:sungho.moon@aol.com
