--- a/_data/author.yml
+++ b/_data/author.yml
@@ -11,7 +11,7 @@ contact:
     url: https://github.com/sungho0205
   - title: twitter
     url: https://twitter.com/sungho__moon
-  - title: website
+  - title: dev
     url: https://sungho.xyz
   - title: email
     url: mailto:sungho.moon@aol.com
